@@ -22,6 +22,7 @@ Sun Dec 22 2013 || supercharger added: Pleasant Prairie, WI
 Sun Dec 22 2013 || supercharger added: Albert Lea, MN
 Fri Dec 20 2013 || supercharger live: Highland Park, IL
 Fri Dec 20 2013 || supercharger added: Somerset, PA
+Thu Dec 19 2013 || supercharger live: St. Anton, Austria
 Thu Dec 19 2013 || supercharger live: Vacaville, CA
 Thu Dec 19 2013 || supercharger live: Lusk, WY
 Thu Dec 19 2013 || supercharger added: Las Vegas, NV
@@ -46,6 +47,7 @@ Sun Dec 8 2013 || supercharger added: Estavayer-le-Lac, Switzerland
 Sun Dec 8 2013 || supercharger added: Onalaska, WI
 Sat Dec 7 2013 || supercharger added: Grand Junction, CO
 Sat Dec 7 2013 || supercharger added: Macedonia, OH
+Fri Dec 6 2013 || supercharger live: two in Netherlands
 Fri Dec 6 2013 || supercharger added: Savannah, GA
 Thu Dec 5 2013 || supercharger added: Greenwich, CT (south)
 Wed Dec 4 2013 || supercharger added: San Juan Capistrano, CA
@@ -64,4 +66,4 @@ Sun Nov 24 2013 || supercharger added: Mishawaka, IN
 Wed Nov 20 2013 || supercharger added: Huntsville, TX
 Thu Nov 14 2013 || supercharger added: Quartzsite, AZ
 Wed Nov 13 2013 || supercharger added: Corsicana, TX
-Say Sep 28 2013 || supercharger live: six in Norway
+Sat Sep 28 2013 || supercharger live: six in Norway
